opa/namespace-lebel/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test
  labels:
    k8s-ns: test
spec: {}
status: {}
